--- a/Matrizapp/src/app/componentes/rkmain/notificaciones/notificaciones.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/notificaciones/notificaciones.component.html
@@ -31,7 +31,7 @@
                 <td>{{getText(notificacion.comentario)}}</td>
                 <td>{{notificacion.estado}}</td>
                 <td>{{notificacion.no_items}}</td>
-                <!-- <td>{{notificacion.avance}}</td> -->
+                <td>{{notificacion.avance}}</td>
 
                 <td style="align-items: center; text-align: center;">
                     <input type="checkbox" [value]="notificacion.check" style="align-items: center; text-align: center;" [(ngModel)]="notificacion.check" [disabled]='notificacion.habilitado'>
