--- a/Matrizapp/src/app/AddPages/addrka/addrka.component.html
+++ b/Matrizapp/src/app/AddPages/addrka/addrka.component.html
@@ -47,7 +47,7 @@
         <div class="col-xl-12">
         
         <mat-form-field>
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" [disabled]="bloquearFiltro">
+            <input matInput type="text" #txtBuscar (keyup.enter)="applyFilter($event.target.value)"  autocomplete="off" placeholder="Filter"  autofocus>
     
         </mat-form-field>
         <mat-progress-bar *ngIf="isLoading" style="width: 100%" mode="buffer"></mat-progress-bar>
@@ -82,6 +82,7 @@
 </mat-dialog-content>
 
     <mat-dialog-actions align="end">
+        <!-- <button mat-raised-button class="nuevo_entidad" (click)="nuevaEntidad()">Nueva Entidad</button> -->
         <button mat-raised-button color="primary" (click)="guardar()">{{ data.button_confirm }}</button>
         <button mat-raised-button color="warn" (click)="cancelar()">{{ data.button_close }}</button>
     </mat-dialog-actions>
