--- a/Matrizapp/src/app/componentes/rkmain/rka/rka.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rka/rka.component.html
@@ -3,10 +3,10 @@
     <!-- Include text description of the icon's meaning for screen-readers -->
 
 
-    <button *ngIf="(areaModel.areaStatusId ==='001'|| areaModel.areaStatusId ==='002'||areaModel.areaStatusId ==='006') && (areaModel.CanAdd ==='true' && allow === 'YN') " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(areaModel.key,areaModel.areaStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
-    <button *ngIf="(areaModel.areaStatusId ==='004'|| areaModel.areaStatusId ==='007') && (areaModel.CanAdd ==='true' && allow === 'YN') " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(areaModel.key,areaModel.areaStatusId)">Editar</button>
-    <button *ngIf="(areaModel.areaStatusId ==='004') && (areaModel.CanAdd ==='true' && allow === 'YN') " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(areaModel.key,areaModel.areaStatusId,'IV')">Validar</button>
-    <button *ngIf="( areaModel.areaStatusId ==='007') && (areaModel.CanAdd ==='true' && allow === 'YN') " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(areaModel.key,areaModel.areaStatusId,'IA')">Aprobar</button>
+    <button *ngIf="boton === 'creador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(areaModel.key,areaModel.areaStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+    <button *ngIf="boton === 'validador' || boton === 'aprobador' "  mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(areaModel.key,areaModel.areaStatusId)">Editar</button>
+    <button *ngIf="boton === 'validador'  " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(areaModel.key,areaModel.areaStatusId,'IV')">Validar</button>
+    <button *ngIf="boton === 'aprobador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(areaModel.key,areaModel.areaStatusId,'IA')">Aprobar</button>
 
 
 </h6>
