--- a/Matrizapp/src/app/componentes/rkmain/rkpendaprob/rkpendaprob.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkpendaprob/rkpendaprob.component.html
@@ -31,7 +31,7 @@
                 </th>
 
                 <th class="sticky-top"><b>Descripcion</b></th>
-                <th class="sticky-top"><b>Area</b></th>
+                <!-- <th class="sticky-top"><b>Area</b></th>
                 <th class="sticky-top"><b>Proceso</b></th>
                 <th class="sticky-top"><b>SubProceso</b></th>
                 <th class="sticky-top"><b>Actividad</b></th>
@@ -39,7 +39,7 @@
                 <th class="sticky-top"><b>Dimension</b></th>
                 <th class="sticky-top"><b>Riesgo</b></th>
                 <th class="sticky-top"><b>Consecuencia</b></th>
-                <th class="sticky-top"><b>Controles</b></th>
+                <th class="sticky-top"><b>Controles</b></th> -->
 
 
             </tr>
@@ -86,7 +86,7 @@
                 <td><a routerLink="" reload='true' (click)='verTable(item.key)'>
                                 {{item.Descripcion}}  </a></td>
 
-                <td>{{item.Area}}</td>
+                <!-- <td>{{item.Area}}</td>
                 <td>{{item.Proceso}}</td>
                 <td>{{item.Subproceso}}</td>
                 <td>{{item.Actividad}}</td>
@@ -94,7 +94,7 @@
                 <td>{{item.Dimension}}</td>
                 <td>{{item.Riesgo}}</td>
                 <td>{{item.Consecuencia}}</td>
-                <td>{{item.TipoControl}}-{{item.Controles}}</td>
+                <td>{{item.TipoControl}}-{{item.Controles}}</td> -->
 
 
 
