--- a/Matrizapp/src/app/componentes/rkmain/rkt/rkt.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkt/rkt.component.html
@@ -1,10 +1,12 @@
 <h6 class="article-title">
     Area > Proceso > Subproceso > Actividad > Tarea
     <!-- <button *ngIf="tareaModel.tareaStatusId !=='008' && tareaModel.CanAdd==='true'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(tareaModel.key,tareaModel.tareaStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button> -->
-    <button *ngIf="(tareaModel.tareaStatusId ==='001'|| tareaModel.tareaStatusId ==='002'||tareaModel.tareaStatusId ==='006') &&(tareaModel.CanAdd ==='true'  && allow === 'YN') " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(tareaModel.key,tareaModel.tareaStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
-    <button *ngIf="(tareaModel.tareaStatusId ==='004'|| tareaModel.tareaStatusId ==='007') &&(tareaModel.CanAdd ==='true'  && allow === 'YN') " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(tareaModel.key,tareaModel.tareaStatusId)">Editar</button>
-    <button *ngIf="(tareaModel.tareaStatusId ==='004') &&(tareaModel.CanAdd ==='true'  && allow === 'YN') " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(tareaModel.key,tareaModel.tareaStatusId,'IV')">Validar</button>
-    <button *ngIf="( tareaModel.tareaStatusId ==='007') &&(tareaModel.CanAdd ==='true'  && allow === 'YN') " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(tareaModel.key,tareaModel.tareaStatusId,'IA')">Aprobar</button>
+    
+
+    <button *ngIf="boton === 'creador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(tareaModel.key,tareaModel.tareaStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+    <button *ngIf="boton === 'validador' || boton === 'aprobador' "  mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(tareaModel.key,tareaModel.tareaStatusId)">Editar</button>
+    <button *ngIf="boton === 'validador'  " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(tareaModel.key,tareaModel.tareaStatusId,'IV')">Validar</button>
+    <button *ngIf="boton === 'aprobador' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(tareaModel.key,tareaModel.tareaStatusId,'IA')">Aprobar</button>
 </h6>
 
 
