--- a/Matrizapp/src/app/login/login.component.html
+++ b/Matrizapp/src/app/login/login.component.html
@@ -10,7 +10,7 @@
                 </div>
 
 
-                <form name="material_login_form" class="form-validation" (ngSubmit)="login()" #loginForm="ngForm" novalidate>
+                <form name="material_login_form" class="form-validation" (ngSubmit)="deafultValues()" #loginForm="ngForm" novalidate>
                     <fieldset>
                         <div class="form-group">
                             <mat-form-field class="full-width">
@@ -24,24 +24,24 @@
                         <div class="form-group">
                             <mat-form-field class="full-width">
                                 <mat-icon matSuffix class="material-icons">lock_outline</mat-icon>
-                                <input matInput type="password" name="password" placeholder="Contraseña" (change)="deafultValues()" [(ngModel)]="model.password" #password="ngModel" required>
+                                <input matInput type="password" name="password" placeholder="Contraseña"  [(ngModel)]="model.password" #password="ngModel" required>
 
 
                             </mat-form-field>
                         </div>
-
-                        <div class="form-group">
+                        
+                        <!-- <div class="form-group">
 
                             <mat-form-field class="full-width">
-                                <!-- <mat-icon matSuffix class="material-icons">all_out</mat-icon> -->
+                                 <mat-icon matSuffix class="material-icons">all_out</mat-icon> 
                                 <label for="position">Posicion</label>
-                                <!-- <input required matInput type="text" name="position" placeholder="Posición" [(ngModel)]="model.position" #position="ngModel"> -->
+                                 <input required matInput type="text" name="position" placeholder="Posición" [(ngModel)]="model.position" #position="ngModel">
                                 <mat-select class="full-width" name="position" [(ngModel)]="posDefault" required>
                                     <mat-option *ngFor="let item of posicionesEllipse" [value]="item.name">{{item.name}} - {{item.value}}</mat-option>
                                 </mat-select>
                             </mat-form-field>
                         </div>
-
+                     -->
 
 
 
