Nueva version con cambios pendientes para la creacion de nuevas entidades

--- a/Matrizapp/src/app/componentes/rkmain/notificaciones/notificaciones.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/notificaciones/notificaciones.component.html
@@ -14,7 +14,11 @@
                 <th class="sticky-top"><b>Acción</b></th>
                 <th class="sticky-top"><b>Items</b></th>
                 <th class="sticky-top"><b>Avance</b></th>
-                <th class="sticky-top "><b id='check'>Eliminar</b></th>
+                <th class="sticky-top "> 
+                <b id='check'>Eliminar</b>
+                <br>
+                     <input type="checkbox" [(ngModel)]="masterSelected" (change)="checkUncheckAll()" >
+                    </th>
 
 
             </tr>
