--- a/Matrizapp/src/app/componentes/rkmain/rkp/rkp.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkp/rkp.component.html
@@ -74,6 +74,13 @@
                             </mat-form-field>
                         </div>
                     </div>
+                    <div class="divide">
+                        <button  class="btn btn-sm btn-light btn-round pl-1"  (click)="generarReporte()"> <img
+                            class="img-circle"
+                            src="assets/images/excel.png"
+                            style="width: 20px; height: 20px"
+                          />Descargar Excel</button>
+                    </div>
                 </div>
             </div>
         </div>
