--- a/Matrizapp/src/app/componentes/rkmain/rkycblando/rkycblando.component.scss
+++ b/Matrizapp/src/app/componentes/rkmain/rkycblando/rkycblando.component.scss
@@ -5,3 +5,9 @@ table {
   .example-chip-list {
     width: 100%;
   }
+
+  .nuevo_entidad{
+    color: #ffffff;
+    background-color: #e0a800;
+    border-color: #d39e00;
+  }
