--- a/Matrizapp/src/app/componentes/rkmain/rkyepf/rkyepf.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkyepf/rkyepf.component.html
@@ -121,6 +121,7 @@
 </mat-dialog-content>
 <mat-dialog-actions>
     <!-- <button *ngIf='!habilitar' mat-raised-button color="primary" (click)="guardar()" disabled>{{ data.button_confirm }}</button> -->
+    <!-- <button  *ngIf="data.nuevo" mat-raised-button class="nuevo_entidad" (click)="nuevaEntidad()">Nueva Entidad</button> -->
     <button mat-raised-button color="primary" (click)="consola()">{{ data.button_confirm }}</button>
     <button mat-raised-button color="warn" (click)="cancelar()">{{ data.button_close }}</button>
 </mat-dialog-actions>
