--- a/Matrizapp/src/app/AddPages/addrky/addrky.component.scss
+++ b/Matrizapp/src/app/AddPages/addrky/addrky.component.scss
@@ -55,3 +55,9 @@ h4{
  .example-chip-list {
    width: 100%;
  }
+
+ .nuevo_entidad{
+   color: #ffffff;
+   background-color: #e0a800;
+   border-color: #d39e00;
+ }
