--- a/Matrizapp/src/app/componentes/rkmain/entidades-pendientes/entidades-pendientes.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/entidades-pendientes/entidades-pendientes.component.html
@@ -1,64 +1,41 @@
-<!-- <h4>NOTIFICACIÓN <br> STATUS PROCESOS DE VALIDACION</h4>
 
-<mat-dialog-content>
-    <table class="table cebra">
-        <thead>
+  <h1 mat-dialog-draggable-title>{{titulo| titlecase}}</h1>
 
 
-            <tr>
+<mat-dialog-content > 
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th>Tipo</th>
+        <th>Codigo</th>
+        <th>Descripcion</th>
+        <th>Valores Asociados</th>      
+        <th>Texto Extendido</th>
+        <!-- <th>Comentarios</th> -->
+        
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of solicitudes">
+        <td>{{item.tipo}}</td>
+        <td>{{item.TABLE_CODE}}</td>
+        <td>{{item.TABLE_DESC}}</td>
+        <td>{{item.ASSOC_REC}}</td>
+        <td>{{item.TEXTO_EXTENDIDO}}</td>
+        <!-- <td>{{item.COMENTARIOS}}</td> -->
+        <!-- <td>{{item.Comentarios}}</td> -->
+       
+    </tbody>
+    
+  </table>
 
-                <th class="sticky-top"><b>Usuario</b></th>
-                <th class="sticky-top"><b>Fecha y Hora</b></th>
-                <th class="sticky-top"><b>Jerarquia</b></th>
-                <th class="sticky-top"><b>Estado</b></th>
-                <th class="sticky-top"><b>Acción</b></th>
-                <th class="sticky-top"><b>Items</b></th>
-                <th class="sticky-top"><b>Avance</b></th>
-                <th class="sticky-top "><b id='check'>Eliminar</b></th>
 
-
-            </tr>
-
-
-        </thead>
-
-        <tbody>
-            <tr *ngFor="let notificacion of notificaciones" [ngClass]="getClass(notificacion.comentario)">
-
-                <td>{{notificacion.usuario}}</td>
-                <td>{{notificacion.fecha}}</td>
-                <td>{{notificacion.jerarquia}}</td>
-                <td>{{getText(notificacion.comentario)}}</td>
-                <td>{{notificacion.estado}}</td>
-                <td>{{notificacion.no_items}}</td>
-                <td>{{notificacion.avance}}</td>
-
-                <td style="align-items: center; text-align: center;">
-                    <input type="checkbox" [value]="notificacion.check" style="align-items: center; text-align: center;" [(ngModel)]="notificacion.check" [disabled]='notificacion.habilitado'>
-
-                </td>
-            </tr>
-
-        </tbody>
-    </table>
 
 </mat-dialog-content>
 
+<mat-dialog-actions align="end" >
 
+  <button mat-raised-button color="accent" (click)="EnviarSolicitud()">Enviar Solicitud</button>
+  <button mat-raised-button color="warn" (click)="cerrar()">Cerrar</button>
 
-
-
-<mat-dialog-actions align="end" cdkDragHandle>
-
-    <button mat-raised-button color="primary" (click)="validarEliminacion()">{{ data.button_confirm }}</button>
-    <button mat-raised-button color="accent" (click)="cargarNotificiaciones()">Actualizar</button>
-
-
-
-
-
-
-
-
-
-</mat-dialog-actions> -->
+</mat-dialog-actions>
