--- a/Matrizapp/src/app/AddPages/addrky/addrky.component.html
+++ b/Matrizapp/src/app/AddPages/addrky/addrky.component.html
@@ -173,7 +173,7 @@
             </div>
         </div>
         <mat-dialog-actions align="end">
-            <!-- <button  *ngIf="data.nuevo" mat-raised-button class="nuevo_entidad" (click)="nuevaEntidad()">Nueva Entidad</button> -->
+            <button  *ngIf="data.nuevo" mat-raised-button class="nuevo_entidad" (click)="nuevaEntidad()">Nueva Entidad</button>
             <button type="submit" class="btn-w-md mat-raised-button mat-primary" color="primary" md-raised-button="" ng-reflect-color="primary" (click)="guardar()">
                     <span class="mat-button-wrapper">
                     <mat-icon mat-list-icon>save</mat-icon>
