--- a/Matrizapp/src/app/layout/header/header.component.html
+++ b/Matrizapp/src/app/layout/header/header.component.html
@@ -21,6 +21,11 @@
             <li class="nav-item">
                 <a (click)="cambiarClave()"><button style="color: #175641 "   mat-button class="mat-button header-btn" myOpenSearchOverlay><mat-icon mat-list-icon style="color: #175641 " title='Help'>help</mat-icon></button> </a>
             </li>
+            <li class="nav-item">
+                <a (click)="cambiarPosicion()"><button style="color: #175641 "   mat-button class="mat-button header-btn" myOpenSearchOverlay><mat-icon mat-list-icon style="color: #175641 " title='Cambiar posicion'>
+                    account_circle
+                    </mat-icon></button> </a>
+            </li>
             <!-- <li class="nav-item">
                 <a (click)="cambiarClave()"><button style="color: #175641 "   mat-button class="mat-button header-btn" myOpenSearchOverlay><mat-icon mat-list-icon style="color: #175641 " title='Help'>summarize</mat-icon></button> </a>
             </li> -->
