--- a/Matrizapp/src/app/layout/header/cambio-posicion/cambio-posicion.component.html
+++ b/Matrizapp/src/app/layout/header/cambio-posicion/cambio-posicion.component.html
@@ -1,3 +1,35 @@
-<p>
-  cambio-posicion works!
-</p>
+<h1 mat-dialog-title  >{{data.titulo}}</h1>
+
+<!-- <h1 mat-dialog-title>Login</h1> -->
+
+<mat-dialog-content >
+  <form autocomplete="off"  >
+     
+    <div class="row">
+      <div class="col-6">
+           
+          <mat-form-field >
+              <mat-label>Descripcion</mat-label>
+              <input  matInput type="text" >
+              
+            </mat-form-field>
+          <mat-form-field >
+              <mat-label>Texto Extendido</mat-label>
+              <input  matInput type="text" >
+            </mat-form-field>
+          
+          </div>
+           
+           
+            
+              
+            </div>
+            <div class="float-end">
+              <button >Agregar</button>
+              
+            </div>
+            
+            
+    </form>
+    <br>
+</mat-dialog-content>
