--- a/Matrizapp/src/app/layout/header/header.component.html
+++ b/Matrizapp/src/app/layout/header/header.component.html
@@ -16,7 +16,7 @@
     </span>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item ">
-                <a class="informacion">{{informacion}}</a>
+                <a class="informacion">{{informacion}} </a> <br> <a class="informacion">{{perfil}}</a>
             </li>
             <li class="nav-item">
                 <a (click)="cambiarClave()"><button style="color: #175641 "   mat-button class="mat-button header-btn" myOpenSearchOverlay><mat-icon mat-list-icon style="color: #175641 " title='Help'>help</mat-icon></button> </a>
