--- a/Matrizapp/src/app/componentes/rkmain/rkpend/rkpend.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkpend/rkpend.component.html
@@ -59,6 +59,7 @@
                 </th>
 
                 <th class="sticky2 sticky-top"><b>Accion</b></th>
+                <th class="sticky2 sticky-top"><b>Jerarquia</b></th>
                 <th class="sticky-top"><b>Comentarios</b></th>
                 <th class="sticky-top fecha"><b>Fecha</b><br></th>
                 <th class="sticky-top"><b>Entidad</b>
@@ -97,6 +98,7 @@
                                 </ng-template> -->
                 </td>
                 <td class="sticky2">{{item.Accion}}</td>
+                <td>{{item.jerarquia}}</td>
                 <td>{{item.Comentarios}}</td>
                 <td class="fecha">{{item.Fecha}}</td>
                 <ng-template [ngIf]="item.Entidad === 'ACTIVIDAD'" [ngIfElse]="Permitido">
