--- a/Matrizapp/src/app/componentes/rkmain/rkpendaprob/rkpendaprob.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkpendaprob/rkpendaprob.component.html
@@ -23,6 +23,7 @@
                     </ng-template>
                 </th>
                 <th class="sticky2 sticky-top"><b>Accion</b></th>
+                <th class="sticky-top"><b>Jerarquia</b></th>
                 <th class="sticky-top"><b>Comentarios</b></th>
                 <th class="sticky-top fecha"><b>Fecha</b><br></th>
                 <th class="sticky-top"><b>Entidad</b>
@@ -61,6 +62,7 @@
                                 </ng-template> -->
                 </td>
                 <td class="sticky2">{{item.Accion}}</td>
+                <td>{{item.jerarquia}}</td>
                 <td>{{item.Comentarios}}</td>
                 <td class="fecha">{{item.Fecha}}</td>
                 <ng-template [ngIf]="item.Entidad === 'ACTIVIDAD'" [ngIfElse]="Permitido">
