--- a/Matrizapp/src/app/componentes/rkmain/rkporaprobar/rkporaprobar.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkporaprobar/rkporaprobar.component.html
@@ -29,6 +29,7 @@
                     </ng-template>
                 </th>
                 <th class="sticky2 sticky-top"><b>Accion</b></th>
+                <th class="sticky-top"><b>Jerarquia</b></th>
                 <th class="sticky-top"><b>Comentarios</b></th>
                 <th class="sticky-top fecha"><b>Fecha</b><br></th>
                 <th class="sticky-top"><b>Entidad</b>
@@ -65,6 +66,7 @@
                                 </ng-template> -->
                 </td>
                 <td class="sticky2">{{item.Accion}}</td>
+                <td class="sticky2">{{item.jerarquia}}</td>
                 <td><textarea [(ngModel)]="item.Comentarios">{{item.Comentarios}}
                 </textarea> </td>
 
